--- a/src/app/modules/disciplinary-management/pages/disciplinary-management-log/disciplinary-management-log.component.html
+++ b/src/app/modules/disciplinary-management/pages/disciplinary-management-log/disciplinary-management-log.component.html
@@ -17,6 +17,6 @@
     [tableColum]="tableColumns"
     [userData]="DisciplineManagementList"
     [loading]="loading"
-    (pageChange)="loadNewPage($event)"
+    (filterChange)="filterUpdated($event)"
   ></ngx-tablecomponent>
 </div>
