--- a/src/app/modules/disciplinary-management/pages/create/create.component.html
+++ b/src/app/modules/disciplinary-management/pages/create/create.component.html
@@ -1,97 +1,95 @@
 <ngx-componentsheader [pageName]="pageName" style="display: block; margin-bottom: 2rem;"></ngx-componentsheader>
-<nb-card>
-    <nb-card-body>
-        <div>
-            <form name="newDisciplineTemplateForm" id="newDisciplineTemplateForm" #newDisciplineTemplateForm="ngForm">
-                <div >
-                    <div>
-                
-                            <div class="linear-form" >
-                                <div class="form-group row">
-                                    <label class="col-sm-2">Recipient:</label>
-                                    <div class="col-sm-8">
-                                        <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event,'recipient');" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
-                                    </div>
-                                
-                                  
-                                </div>
-                                <div class="form-group row">
-                                    <label class="col-sm-2"> Cc:</label>
-                                    <div class="col-sm-8">
-                                        <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event,'cc');" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
-                                    </div>
-                                
-                                  
-                                </div>
-                                <div class="form-group row">
-                                    <label  class="col-sm-2">
-                                        <span *ngIf="IsReward">Reward</span>
-                                        <span *ngIf="!IsReward">Discipline</span> Type</label>
-                                    <div class="col-sm-8">
-                                        <select  (change)="getTemplatesbyId(disciplinaryTypeId.value)" class="form-control" [(ngModel)]="DisciplineManagement.disciplinaryTypeId" id="disciplinaryTypeId" name="disciplinaryTypeId" #disciplinaryTypeId="ngModel" required>
-                                            <option value="undefined">--Select Type--</option>
-                                            <option *ngFor="let dType of allDisciplineType" [value]="dType.id">{{dType.disciplineName}}</option>
-                                        </select>
-                                        <div *ngIf="disciplinaryTypeId.invalid && (disciplinaryTypeId.dirty || disciplinaryTypeId.touched)" class="error">
-                                            <div *ngIf="disciplinaryTypeId.errors.required">Discipline Type is required</div>
-                                          </div>
-                                     </div>
-                                 
-                                </div>
-                                <div class="form-group row">
-                                    <label class="col-sm-2">Discipline Template</label>
-                                    <div class="col-sm-8">
-                                        <select class="form-control" [(ngModel)]="DisciplineManagement.disciplinaryTemplateId" id="disciplinaryTemplateId" name="disciplinaryTemplateId" #disciplinaryTemplateId="ngModel" required>
-                                            <option>--Select Type--</option>
-                                            <option *ngFor="let templ of allDisciplineTemplate" [value]="templ.id">{{templ.templateName}}</option>
-                                        </select>
-                                        <div *ngIf="disciplinaryTemplateId.invalid && (disciplinaryTemplateId.dirty || disciplinaryTemplateId.touched)" class="error">
-                                            <div *ngIf="disciplinaryTemplateId.errors.required">Discipline Template is required</div>
-                                          </div>
-                                    </div>
-                                  
-                                </div>
-                                <div class="form-group row">
-                                    <label class="col-sm-2">Duration (Weeks)</label>
-                                    <div class="col-sm-8">
-                                        <input type="number" class="form-control" placeholder="Enter Duration in weeks" name="duration"
-                                        #duration="ngModel" [(ngModel)]="DisciplineManagement.duration" required>
-                                      <div *ngIf="duration.invalid && (duration.dirty || duration.touched)" class="error">
-                                        <div *ngIf="duration.errors.required">Default duration is required</div>
-                                      </div>
-                                    </div>
-                                
-                                </div> 
-                   
-                            <div class="form-group row">
-                                <label class="col-sm-2">Attachment</label>
-                                <div class="col-sm-8">
-                                    <ngx-file-upload (valueChange)="selectedFile($event,'Supporting Document')"  class="form-control"></ngx-file-upload>
-                                </div>
-                               
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-2"></label>
-                                <div class="col-sm-8"> 
-                                    <div style="display: flex;flex-direction: row;">
 
-                                        <ngx-loadable-button [loading]="loadingDiscipline" [disabled]="newDisciplineTemplateForm.invalid" (click)="createMgtLog()" >
-                                            Send
-                                          </ngx-loadable-button> 
-                            <div style="padding-left: 20px;">
-                                <button outline="true" nbButton status="primary" (click)="discard()" class="d-flex column">
-                                    Discard
-                                 </button>
-                            </div>
+    <nb-card>
+        <nb-card-body>
+            <div class="container">
+                <form name="newDisciplineTemplateForm" id="newDisciplineTemplateForm" #newDisciplineTemplateForm="ngForm">
+                    
+                                    <div class="form-group row">
+                                        <label class="col-sm-2">Recipient:</label>
+                                        <div class="col-sm-8">
+                                            <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event,'recipient');" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
+                                        </div>
+                                    
+                                      
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2"> Cc:</label>
+                                        <div class="col-sm-8">
+                                            <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event,'cc');" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
+                                        </div>
+                                    
+                                      
+                                    </div>
+                                    <div class="form-group row">
+                                        <label  class="col-sm-2">
+                                            <span *ngIf="IsReward">Reward</span>
+                                            <span *ngIf="!IsReward">Discipline</span> Type</label>
+                                        <div class="col-sm-8">
+                                            <select fullWidth  (change)="getTemplatesbyId(disciplinaryTypeId.value)" class="form-control" [(ngModel)]="DisciplineManagement.disciplinaryTypeId" id="disciplinaryTypeId" name="disciplinaryTypeId" #disciplinaryTypeId="ngModel" required>
+                                                <option value="undefined">--Select Type--</option>
+                                                <option *ngFor="let dType of allDisciplineType" [value]="dType.id">{{dType.disciplineName}}</option>
+                                            </select>
+                                            <div *ngIf="disciplinaryTypeId.invalid && (disciplinaryTypeId.dirty || disciplinaryTypeId.touched)" class="error">
+                                                <div *ngIf="disciplinaryTypeId.errors.required">Discipline Type is required</div>
+                                              </div>
+                                         </div>
+                                     
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2">Discipline Template</label>
+                                        <div class="col-sm-8">
+                                            <select fullWidth class="form-control" [(ngModel)]="DisciplineManagement.disciplinaryTemplateId" id="disciplinaryTemplateId" name="disciplinaryTemplateId" #disciplinaryTemplateId="ngModel" required>
+                                                <option>--Select Type--</option>
+                                                <option *ngFor="let templ of allDisciplineTemplate" [value]="templ.id">{{templ.templateName}}</option>
+                                            </select>
+                                            <div *ngIf="disciplinaryTemplateId.invalid && (disciplinaryTemplateId.dirty || disciplinaryTemplateId.touched)" class="error">
+                                                <div *ngIf="disciplinaryTemplateId.errors.required">Discipline Template is required</div>
+                                              </div>
+                                        </div>
+                                      
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2">Duration (Weeks)</label>
+                                        <div class="col-sm-8">
+                                            <input fullWidth nbInput type="number" class="form-control" placeholder="Enter Duration in weeks" name="duration"
+                                            #duration="ngModel" [(ngModel)]="DisciplineManagement.duration" required>
+                                          <div *ngIf="duration.invalid && (duration.dirty || duration.touched)" class="error">
+                                            <div *ngIf="duration.errors.required">Default duration is required</div>
+                                          </div>
+                                        </div>
+                                    
+                                    </div> 
+                       
+                                <div class="form-group row">
+                                    <label class="col-sm-2">Attachment</label>
+                                    <div class="col-sm-8">
+                                        <ngx-file-upload fullWidth (valueChange)="selectedFile($event,'Supporting Document')"  class="form-control"></ngx-file-upload>
                                     </div>
                                    
-                          
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </nb-card-body>
-</nb-card>
+                                <div class="form-group">
+                                    <label class="col-sm-2"></label>
+                                    <div class="col-sm-8"> 
+                                        <div style="display: flex;flex-direction: row;">
+    
+                                            <ngx-loadable-button [loading]="loadingDiscipline" [disabled]="newDisciplineTemplateForm.invalid" (click)="createMgtLog()" >
+                                                Send
+                                              </ngx-loadable-button> 
+                                <div style="padding-left: 20px;">
+                                    <button outline="true" nbButton status="primary" (click)="discard()" class="d-flex column">
+                                        Discard
+                                     </button>
+                                </div>
+                                        </div>
+                                       
+                              
+                                    </div>
+                                </div>
+            
+                    
+                </form>
+            </div>
+        </nb-card-body>
+    </nb-card>
+
