--- a/src/app/components/custom-form/custom-form.component.html
+++ b/src/app/components/custom-form/custom-form.component.html
@@ -15,7 +15,7 @@
                 <ngx-date-range *ngIf="field.type===FIELD_TYPES.date_range" [(value)]="data[field.name]"></ngx-date-range>
                 <ngx-employee-master-search *ngIf="field.type===FIELD_TYPES.employee" [(value)]="data[field.name]" [allowmultipleselection]="!field.singleSelection" (valueChange)="employeeChange(field, $event)"></ngx-employee-master-search>
                 <ngx-multi-select *ngIf="field.type===FIELD_TYPES.select" [(value)]="tempData[field.name]" (valueChange)="selectChange(field, $event)" [choice_name]="field.choice_name"
-                    [singleSelection]="field.singleSelection"></ngx-multi-select>
+                    [singleSelection]="field.singleSelection" [dropdown_id]="field.dropDownId"></ngx-multi-select>
                 <div *ngIf="errors && errors[field.name]">
                     <div *ngFor="let error of errors[field.name]" class="error">
                         {{error}}
