--- a/src/app/modules/payroll/institutionalmanagement/institutionalmanagement.component.html
+++ b/src/app/modules/payroll/institutionalmanagement/institutionalmanagement.component.html
@@ -1,4 +1,6 @@
 
+
+{{data|json}}
 <ngx-page
   (topActionClicked)="pageActionClicked($event)"
   [(showModal)]="showModal"
@@ -9,7 +11,7 @@
   (formCompleted)="submitForm()"
   (formCancelled)="hideModal()"
   [tableData]="data"
-  [tableColumns]="getTableColumns()"
+  [tableColumns]="tableColumns"
   [loadingSave]="loadingSave"
   [formTitle]="getFormTitle()"
   [emptyConfig]="emptyConfig"
