--- a/src/app/modules/benefit/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/benefit/pages/dashboard/dashboard.component.html
@@ -111,7 +111,7 @@
 </ngx-componentsheader>
 
 <div class="row">
-  <div class="col-sm-4" *ngFor="let a of allBenefito" style="padding: 0px;">
+  <div class="col-sm-4" *ngFor="let a of allBenefito" style="padding: 0px;"  [routerLink]="['/benefits/BenefitDetails',a.id]">
     <div style="margin: 15px;">
       <div class="card" style="display: flex; flex-direction: row; padding: 1rem;">
         <div style="margin-right: 1rem;">
