--- a/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
+++ b/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
@@ -34,7 +34,7 @@
         <div style="padding: 30px;"></div>
 
         <div class="level">
-          <h6>Type of Employment</h6>
+          <h6>Level</h6>
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" >
             <label class="custom-control-label">Entry Level</label>
@@ -54,9 +54,8 @@
         </div>
         <div style="padding: 30px;"></div>
 
-
         <div class="industry">
-          <h6>Type of Employment</h6>
+          <h6>Industry</h6>
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" >
             <label class="custom-control-label" >Banking</label>
@@ -78,6 +77,38 @@
             <!-- <nb-checkbox (checkedChange)="toggle($event)">Finance</nb-checkbox> -->
             <input type="checkbox" class="custom-control-input" >
             <label class="custom-control-label" >Finance</label>
+          </div>
+        </div>
+
+        <div class="salary">
+          <h6>Salary Scale</h6>
+          <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >Less than 100k</label>
+            <!-- <nb-checkbox (checkedChange)="toggle($event)" status="basic">Banking</nb-checkbox> -->
+
+          </div>
+          <div class="custom-control custom-checkbox">
+            <!-- <nb-checkbox (checkedChange)="toggle($event)">Oil & Gas</nb-checkbox> -->
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >100k - 300k</label>
+
+          </div>
+          <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >100k - 300k</label>
+            <!-- <nb-checkbox (checkedChange)="toggle($event)">Technology</nb-checkbox> -->
+          </div>
+          <div class="custom-control custom-checkbox">
+            <!-- <nb-checkbox (checkedChange)="toggle($event)">Finance</nb-checkbox> -->
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >300k - 500k</label>
+          </div>
+
+          <div class="custom-control custom-checkbox">
+            <!-- <nb-checkbox (checkedChange)="toggle($event)">Finance</nb-checkbox> -->
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >More than 500k</label>
           </div>
         </div>
       </div>
